--- a/DockerFile
+++ b/DockerFile
@@ -2,7 +2,7 @@ FROM maven:3.9.8-eclipse-temurin-21 AS build
 
 COPY src /app/src
 
-COPY pom.xml .
+COPY pom.xml /app
 WORKDIR /app
 RUN mvn clean package -DskipTests
 
