新增密碼登入

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,12 @@ spring.application.name=azure-basic-app
 spring.datasource.url=jdbc:postgresql://dpg-cs87igdsvqrc73blhp2g-a.singapore-postgres.render.com:5432/game_ycas
 spring.datasource.username=game_ycas_user
 spring.datasource.password=ER0EmTb0uBjbODEBIveooGFfzROWUCuE
+# spring.datasource.url=jdbc:postgresql://localhost:5432/game
+# spring.datasource.username=postgres
+# spring.datasource.password=O48079scar
 
-spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
