--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 spring.application.name=azure-basic-app
-spring.datasource.url=jdbc:postgresql://dpg-cs87igdsvqrc73blhp2g-a.singapore-postgres.render.com:5432/game_ycas
-spring.datasource.username=game_ycas_user
-spring.datasource.password=ER0EmTb0uBjbODEBIveooGFfzROWUCuE
+spring.datasource.url=jdbc:postgresql://dpg-cssoe1btq21c73a37300-a.singapore-postgres.render.com:5432/game_86gm
+spring.datasource.username=game_86gm_user
+spring.datasource.password=CQGtWwhvcJ8nn0qRiPqNOslSp1WfKJlQ
 # spring.datasource.url=jdbc:postgresql://localhost:5432/game
 # spring.datasource.username=postgres
 # spring.datasource.password=O48079scar
-
 
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
