change database setting

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=azure-basic-app
-spring.datasource.url=jdbc:postgresql://dpg-cssoe1btq21c73a37300-a.singapore-postgres.render.com:5432/game_86gm
-spring.datasource.username=game_86gm_user
-spring.datasource.password=CQGtWwhvcJ8nn0qRiPqNOslSp1WfKJlQ
+spring.datasource.url=jdbc:postgresql://dpg-ctdujv5umphs73991hd0-a.singapore-postgres.render.com:5432/gamedata_f0ek
+spring.datasource.username=gamedata_f0ek_user
+spring.datasource.password=0xUvHdlxKe2MjYAFmLKbP49y0ecCZgBd
 # spring.datasource.url=jdbc:postgresql://localhost:5432/game
 # spring.datasource.username=postgres
 # spring.datasource.password=O48079scar
